# reolink-api-ansible

./: .gitignore  LICENSE  README.md  galaxy.yml  pyproject.toml  requirements.txt
docs/: example-playbook.yml
plugins/module_utils/: reolink_utils.py
plugins/modules/: reolink_camera.py  reolink_facts.py  reolink_user.py
tests/unit/: test_reolink_camera.py
